# eating-snake

./: .gitignore  .gitmodules  LICENSE  LICENSE-HEAD.txt  Makefile  README.en.md  README.md  README_en.md  README_zh.md  TODO.md  TODO.txt  readme.md  待办.txt
2022-11-7/src/: Makefile  food.h  score.h
Snake-Android/eating-snake_cpp/: b3i.sh
Snake-Android/eating-snake_cpp/jni/: Application.mk
Snake-Android/eating-snake_cpp/jni/lib_imgui/: Android.mk
Snake-Android/eating-snake_cpp/jni/snake/: Android.mk
Snake-Android/eating-snake_cpp/jni/snake/src/: android-main.cpp
Snake-Android/eating-snake_cpp/jni/stb_image/: Android.mk
Snake-Android/eating-snake_java/: AndroidManifest.xml
Snake-Android/eating-snake_java/jni/: Android.mk  Application.mk  main.c
Snake-Android/eating-snake_java/res/values/: strings.xml  styles.xml
Snake-Desktop/: CMakeLists.txt
Snake-Desktop/src/: desktop-main.cpp
Snake-core/imgui-1.89.4/: CMakeLists.txt
Snake-core/snake/src/: Game.cpp  main.cpp  snake.h  zj_android_native_app_glue.hpp  zj_logger.c  zj_string.cpp  zj_string.hpp
Snake-core/stb_image/: CMakeLists.txt  stb_image.h
Snake-core/zjtools/: .gitignore  LICENSE
Snake-core/zjtools/common/: zj_double_linkedlist.hpp  zj_logger.h
Snake-core/zjtools/draw/: zj_android_native_app_glue.cpp  zj_android_native_app_glue.hpp  zj_shader.cpp
Snake_Android/eating-snake_cpp/: b3i.sh
Snake_Android/eating-snake_cpp/jni/: Android.mk  Android.mk.bk  main.cpp
Snake_Android/eating-snake_cpp/jni/imgui/: Android.mk
Snake_Android/eating-snake_cpp/jni/lib_imgui/: Android.mk
Snake_Android/eating-snake_cpp/jni/snake/: Android.mk
Snake_Android/eating-snake_cpp/jni/src/: main.cpp  zj_android_native_app_glue.cpp  zj_logger.c  zj_logger.h  zj_string.cpp  zj_utf8_to_utf16.c
Snake_Android/eating-snake_cpp/jni/zjtools/: Android.mk  README.md
Snake_Android/eating-snake_java/: AndroidManifest.xml
Snake_Android/eating-snake_java/jni/: Android.mk  Application.mk  build.sh  main.c
Snake_Android/eating-snake_java/res/values/: strings.xml  styles.xml
Snake_Android/history-versions/2022-11-7/src/: snake.h
Snake_Android/贪吃蛇_Java层/: AndroidManifest.xml
Snake_Android/贪吃蛇_Java层/jni/: Android.mk
Snake_Android/贪吃蛇_Java层/res/values/: strings.xml  styles.xml
Snake_Android/贪吃蛇_Native层/: b3i.sh
Snake_Android/贪吃蛇_Native层/jni/: Android.mk  Application.mk  main.cpp
Snake_Android/贪吃蛇_Native层/jni/snake/: Game.hpp  food.c  score.c  snake.c
history-versions/2022-11-7/src/: main.h
libs/Dear ImGui/: index.txt
libs/GLFW/: index.txt
libs/zjtools/: index.txt
src/: Makefile  TODU  food.c  food.h  locals.c  locals.h  main.c  main.h  score.c  score.h  snake.c  snake.h
(+36 files in other folders)
